--- a/API/composer.json
+++ b/API/composer.json
@@ -8,5 +8,9 @@
     "require-dev": {
         "symfony/var-dumper": "^4.0"
     },
+    "autoload": {
+        "files": ["./conf.php"],
+        "psr-4": {"Fidmi\\Models\\" : "models/"}
+    },
     "license": "MIT"
 }
