--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ### Symfony
 /.web-server-pid
 /app/config/parameters.yml
-/build/
+./build/
 /phpunit.xml
 /var/*
 !/var/cache
@@ -298,7 +298,7 @@ Homestead.json
 ## Specific to RubyMotion:
 .dat*
 .repl_history
-build/
+./build/
 *.bridgesupport
 build-iPhoneOS/
 build-iPhoneSimulator/
@@ -344,7 +344,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
-build/
+./build/
 develop-eggs/
 dist/
 downloads/
