--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "sass-loader": "^6.0.6",
     "vue": "^2.5.0",
     "vue-onsenui": "~2.3.0",
+    "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
