--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "cordova-android": "^7.0.0",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-whitelist": "^1.3.3",
+    "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "onsenui": "~2.7.2",
     "sass-loader": "^6.0.6",
